--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "moxios": "^0.4.0",
+    "redux-promise": "^0.6.0"
   }
 }
